# analyzing-the-2013-colorado-flood-using-time-series-analysis

./: ._.git  ._.github  ._.gitignore  ._.mypy_cache  ._.pre-commit-config.yaml  ._.pytest_cache  ._.ruff_cache  ._2025-01-20_Analyzing-the-2013-Colorado-Flood-Using-Time-Series-Analysis-f8abf3d93e44.py  ._LICENSE  ._README.md  .___pycache__  ._article.md  ._benchmark_rust.py  ._pyproject.toml  ._rust  ._src  ._tests  2025-01-20_Analyzing-the-2013-Colorado-Flood-Using-Time-Series-Analysis-f8abf3d93e44.py  README.md  article.md  benchmark_rust.py  pyproject.toml
.github/: ._workflows
.github/workflows/: ._ci.yml
rust/: ._Cargo.toml  ._bench  ._core  ._py  ._target
rust/bench/: ._Cargo.toml  ._src  Cargo.toml
rust/bench/src/: ._main.rs  main.rs
rust/core/: ._Cargo.toml  ._src  Cargo.toml
rust/core/src/: ._lib.rs  lib.rs
rust/py/: ._Cargo.toml  ._src  Cargo.toml
rust/py/src/: ._lib.rs  lib.rs
src/: ._compute_kernel.py  compute_kernel.py
tests/: .___init__.py  .___pycache__  ._conftest.py  ._test_smoke.py
